# TrabalhoFinalCPD

cpd/: CMakeLists.txt  arvores_e_organizacao.cpp  arvores_e_organizacao.h  colors.cpp  colors.h  defs_gerais_e_cartas.cpp  defs_gerais_e_cartas.h  main.cpp  search.cpp  search.h  struct_e_parsing.cpp  struct_e_parsing.h  vcpkg.json
